tests/snapshots/distributed_snapshot/golden_distributed_snapshot__maximum_complexity.snap
---
source: tests/golden_distributed_snapshot.rs
expression: capture
---
SnapshotFormatCapture {
    scenario: "maximum_complexity",
    original: RegionSnapshot {
        region_id: RegionId(500:99),
        state: Finalizing,
        timestamp: Time(18446744073709551615ns),
        sequence: 18446744073709551615,
        vector_clock: VC{},
        origin_id: 1,
        epoch: 1,
        tasks: [
            TaskSnapshot {
                task_id: TaskId(1000:0),
                state: Pending,
                priority: 0,
            },
            TaskSnapshot {
                task_id: TaskId(1001:1),
                state: Running,
                priority: 1,
            },
            TaskSnapshot {
                task_id: TaskId(1002:2),
                state: Completed,
                priority: 2,
            },
            TaskSnapshot {
                task_id: TaskId(1003:0),
                state: Cancelled,
                priority: 3,
            },
            TaskSnapshot {
                task_id: TaskId(1004:1),
                state: Panicked,
                priority: 4,
            },
            TaskSnapshot {
                task_id: TaskId(1005:2),
                state: Pending,
                priority: 5,
            },
            TaskSnapshot {
                task_id: TaskId(1006:0),
                state: Running,
                priority: 6,
            },
            TaskSnapshot {
                task_id: TaskId(1007:1),
                state: Completed,
                priority: 7,
            },
            TaskSnapshot {
                task_id: TaskId(1008:2),
                state: Cancelled,
                priority: 8,
            },
            TaskSnapshot {
                task_id: TaskId(1009:0),
                state: Panicked,
                priority: 9,
            },
        ],
        children: [
            RegionId(2000:0),
            RegionId(2001:1),
            RegionId(2002:2),
            RegionId(2003:3),
            RegionId(2004:0),
        ],
        finalizer_count: 100,
        budget: BudgetSnapshot {
            deadline_nanos: Some(
                18446744073709551615,
            ),
            polls_remaining: Some(
                4294967295,
            ),
            cost_remaining: Some(
                18446744073709551615,
            ),
        },
        cancel_reason: Some(
            "maximum_complexity_test_scenario_with_very_long_reason_string_to_test_string_serialization",
        ),
        parent: Some(
            RegionId(499:98),
        ),
        metadata: [
            0,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
            32,
            33,
            34,
            35,
            36,
            37,
            38,
            39,
            40,
            41,
            42,
            43,
            44,
            45,
            46,
            47,
            48,
            49,
            50,
            51,
            52,
            53,
            54,
            55,
            56,
            57,
            58,
            59,
            60,
            61,
            62,
            63,
            64,
            65,
            66,
            67,
            68,
            69,
            70,
            71,
            72,
            73,
            74,
            75,
            76,
            77,
            78,
            79,
            80,
            81,
            82,
            83,
            84,
            85,
            86,
            87,
            88,
            89,
            90,
            91,
            92,
            93,
            94,
            95,
            96,
            97,
            98,
            99,
        ],
        auth_tag: Tag(<redacted>),
    },
    serialized_hex: "534e415002f40100006300000003ffffffffffffffffffffffffffffffff080000000000000000000000010000000000000001000000000000000a000000e8030000000000000000e9030000010000000101ea030000020000000202eb030000000000000303ec030000010000000404ed030000020000000005ee030000000000000106ef030000010000000207f0030000020000000308f103000000000000040905000000d007000000000000d107000001000000d207000002000000d307000003000000d4070000000000006400000001ffffffffffffffff01ffffffff01ffffffffffffffff015a0000006d6178696d756d5f636f6d706c65786974795f746573745f7363656e6172696f5f776974685f766572795f6c6f6e675f726561736f6e5f737472696e675f746f5f746573745f737472696e675f73657269616c697a6174696f6e01f30100006200000064000000000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162630000000000000000000000000000000000000000000000000000000000000000",
    size_bytes: 473,
    deserialized: Ok(
        RegionSnapshot {
            region_id: RegionId(500:99),
            state: Finalizing,
            timestamp: Time(18446744073709551615ns),
            sequence: 18446744073709551615,
            vector_clock: VC{},
            origin_id: 1,
            epoch: 1,
            tasks: [
                TaskSnapshot {
                    task_id: TaskId(1000:0),
                    state: Pending,
                    priority: 0,
                },
                TaskSnapshot {
                    task_id: TaskId(1001:1),
                    state: Running,
                    priority: 1,
                },
                TaskSnapshot {
                    task_id: TaskId(1002:2),
                    state: Completed,
                    priority: 2,
                },
                TaskSnapshot {
                    task_id: TaskId(1003:0),
                    state: Cancelled,
                    priority: 3,
                },
                TaskSnapshot {
                    task_id: TaskId(1004:1),
                    state: Panicked,
                    priority: 4,
                },
                TaskSnapshot {
                    task_id: TaskId(1005:2),
                    state: Pending,
                    priority: 5,
                },
                TaskSnapshot {
                    task_id: TaskId(1006:0),
                    state: Running,
                    priority: 6,
                },
                TaskSnapshot {
                    task_id: TaskId(1007:1),
                    state: Completed,
                    priority: 7,
                },
                TaskSnapshot {
                    task_id: TaskId(1008:2),
                    state: Cancelled,
                    priority: 8,
                },
                TaskSnapshot {
                    task_id: TaskId(1009:0),
                    state: Panicked,
                    priority: 9,
                },
            ],
            children: [
                RegionId(2000:0),
                RegionId(2001:1),
                RegionId(2002:2),
                RegionId(2003:3),
                RegionId(2004:0),
            ],
            finalizer_count: 100,
            budget: BudgetSnapshot {
                deadline_nanos: Some(
                    18446744073709551615,
                ),
                polls_remaining: Some(
                    4294967295,
                ),
                cost_remaining: Some(
                    18446744073709551615,
                ),
            },
            cancel_reason: Some(
                "maximum_complexity_test_scenario_with_very_long_reason_string_to_test_string_serialization",
            ),
            parent: Some(
                RegionId(499:98),
            ),
            metadata: [
                0,
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
                46,
                47,
                48,
                49,
                50,
                51,
                52,
                53,
                54,
                55,
                56,
                57,
                58,
                59,
                60,
                61,
                62,
                63,
                64,
                65,
                66,
                67,
                68,
                69,
                70,
                71,
                72,
                73,
                74,
                75,
                76,
                77,
                78,
                79,
                80,
                81,
                82,
                83,
                84,
                85,
                86,
                87,
                88,
                89,
                90,
                91,
                92,
                93,
                94,
                95,
                96,
                97,
                98,
                99,
            ],
            auth_tag: Tag(<redacted>),
        },
    ),
    content_hash: "62201318e9988120aef2576180843ecc81a17c822591f6897c58f88a0541093c",
    metadata: SnapshotCaptureMetadata {
        test_name: "maximum_complexity",
        description: "Maximally complex snapshot testing boundary conditions and large data sets",
        version: 2,
        magic: "SNAP",
    },
}
